kubernetes/staging/document-server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    software.uncharted.terarium: document-server
  name: document-server
  namespace: terarium
spec:
  replicas: 1
  selector:
    matchLabels:
      software.uncharted.terarium: document-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        software.uncharted.terarium: document-server
    spec:
      containers:
        - image: ghcr.io/darpa-askem/document-server:latest
          name: document-server
          ports:
            - containerPort: 3030
          resources: {}
      restartPolicy: Always
status: {}
