kubernetes/staging/document-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: document-service
spec:
  ports:
    - name: 3030-tcp
      port: 3030
      protocol: TCP
      targetPort: 3030
  selector:
    software.uncharted.terarium: document-service
status:
  loadBalancer: {}
